[metadata]
name = channel
author = Andrea Andreolli
author_email = a.andreolli@kit.edu
description = Python toolkit to read and postprocess DNS simulation data from channel (github.com/davecats/channel).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andyandreolli/channel_pytools
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/andyandreolli/channel_pytools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src